--- a/movieList/package.json
+++ b/movieList/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^26.0.15",
     "@types/selenium-webdriver": "^4.0.12",
     "chromedriver": "^91.0.0",
     "geckodriver": "^1.22.3",
@@ -19,5 +18,8 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23"
   }
 }
